Refactor DocumentLine and Charge classes to use primitive types for quantity and add convenience methods for Money operations